# bee-swarm-protocol

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: swarm_coordination.py
src/bee_swarm_protocol/: __init__.py  aggregator.py  bee_agent.py  consensus.py  dance_decay.py  dance_parser.py  dance_propagation.py  dance_response.py  dance_signal.py  dance_visualizer.py  goal_emergence.py  llm_agent.py  llm_integration.py  persistence.py
tests/: test_bee_swarm.py  test_persistence.py
