[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bee-swarm-protocol"
version = "0.1.0"
description = "Bee-inspired swarm communication and coordination: dance language, consensus formation, goal emergence, and signal aggregation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "FiAgent Team" },
]
keywords = ["swarm", "bee", "agent", "coordination", "consensus", "dance-language", "multi-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Distributed Computing",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1.0",
]
messaging = [
    "agent-message-bus>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/fiagent/bee-swarm-protocol"
Repository = "https://github.com/fiagent/bee-swarm-protocol"
"Bug Tracker" = "https://github.com/fiagent/bee-swarm-protocol/issues"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
